# Matterix

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  index.html  matterix.sh  pyproject.toml
.github/: CODEOWNERS  LICENSE_HEADER.txt  PULL_REQUEST_TEMPLATE.md
.github/workflows/: pre-commit.yaml  unit-tests.yaml
docker/: .env.base  Dockerfile.base  container.py  container.sh  docker-compose.yaml
docker/utils/: __init__.py  container_interface.py  state_file.py  x11_utils.py
scripts/: list_envs.py  list_workflows.py  random_agent.py  run_cogact.py  run_workflow.py  test_sm.py  zero_agent.py
scripts/rl_games/: play.py  train.py
scripts/rsl_rl/: cli_args.py  play.py  train.py
scripts/sb3/: play.py  train.py
scripts/skrl/: play.py  train.py
source/MATteRIX/: setup.py
source/MATteRIX/MATteRIX/: ui_extension_example.py
source/matterix/: setup.py
source/matterix_assets/: setup.py
source/matterix_sm/: README.md  pyproject.toml  setup.py
source/matterix_sm/matterix_sm/: __init__.py  _compat.py  action_base.py  action_constants.py  compositional_action.py  math_utils.py  primitive_action.py  robot_action_spaces.py  scene_data.py  semantic_info.py  state_machine.py
source/matterix_sm/matterix_sm/compositional_actions/: __init__.py  pick_object.py  place_object.py
source/matterix_sm/matterix_sm/primitive_actions/: __init__.py  gripper.py  move_relative.py  move_to_frame.py  move_to_pose.py  semantic_action.py  wait.py
source/matterix_sm/matterix_sm/semantic_actions/: __init__.py  heater_action.py
source/matterix_tasks/: setup.py
(+109 files in other folders)
